--- a/app/Resources/views/products/details.html.twig
+++ b/app/Resources/views/products/details.html.twig
@@ -4,19 +4,40 @@
     {{ parent() }}
 {% endblock %}
 {% block body %}
-    <div class="return col-xs-12 col-md-2">
-        <a href="#">
+    <div class="return col-xs-1 col-sm-3 col-md-2">
+        <a onclick="javascript:history.back(); return false;">
             <i class="glyphicon glyphicon-chevron-left"></i>
-            <span class="hidden-xs hidden-sm">Вернуться к каталогу</span>
+            <span class="hidden-xs">Вернуться к каталогу</span>
         </a>
     </div>
     <div class="col-md-8" style="margin-top: 3%">
         <div class="col-md-4">
             <img src="{{ asset('https://vk.com/images/gifts/256/312.jpg') }}" />
         </div>
-        <div class="col-md-offset-1 col-md-4">
-            <h1>Конфета №123</h1>
-            <span style="font-size: 16px; color: #bb646d">10 р.</span>
+        <div class="col-md-offset-1 col-md-6">
+            <h1> {{ product.name }} </h1>
+            {% if is_granted("ROLE_MODERATOR")%}
+                <span style="color: #e0dfe1; font-size: 14px;">
+                        Дата создания: {{ product.createDate|date('d.m.Y') }} <br>
+                        Дата последнего изменения: {{ product.updateDate|date('d.m.Y') }}
+                </span>
+                <a href="/products/edit/{{ product.id }}" class="btn btn-link">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </a><br>
+            {% endif %}
+            <span style="font-size: 20px;">{{ product.price }} р.</span>
+            <div class="details">
+                <p>
+                    <span>Описание: </span><br>
+                    {{ product.description }}
+                </p>
+                <p>
+                    <span>Производитель: </span> {{ product.manufacturer }}
+                </p>
+                <p>
+                    <span>SKU: </span> {{ product.sku }}
+                </p>
+            </div>
         </div>
     </div>
 {% endblock %}
