--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -229,7 +229,6 @@ a:hover li:hover {
     position: absolute;
     float: right;
     top: 20px;
-    /*left: 0;*/
 }
 
 li {
@@ -260,20 +259,49 @@ ol.breadcrumb {
     position: relative;
 }
 
+.product>strong>a{
+    color: black;
+}
+
 img {
     width: 100%;
     height: 100%;
 }
 
+.details span{
+    font-size: 16px;
+    color: #bb646d;
+}
+
+.details {
+    margin-top: 5%;
+}
+
+/*.details span>p {*/
+    /*color: #bb646d;*/
+/*}*/
+.return {
+    margin-top: 2%;
+    display: inline;
+
+}
 .return * {
+
     color: #974c53;
     padding-top: 1%;
-    /*height: 100%;*/
 }
+/*.return:hover {*/
+    /*!*background-color: #f8f7f9;*!*/
+    /*background: linear-gradient(to right, #fff9f2, #ffffff);*/
+/*}*/
 
 .admin {
     right: 0;
     position: absolute;
+}
+
+.admin>a>span {
+    margin-top: 40%
 }
 
 #productImg {
@@ -282,11 +310,8 @@ img {
 }
 
 #edit_product div {
-    /*display: flex;*/
-    /*justify-content: space-between;*/
     overflow: hidden;
     margin-bottom: 1%;
-    /*width: inherit;*/
 }
 
 #edit_product textarea{
