Update details, create, edit and main page of products

--- a/app/Resources/views/products/edit.html.twig
+++ b/app/Resources/views/products/edit.html.twig
@@ -1,16 +1,26 @@
 {% extends ':home:index.html.twig' %}
 
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('bundles/app/js/validation.js') }}"></script>
+{% endblock %}
 {% block body %}
     {% for flash_message in app.session.flashbag.get('error') %}
-        <div class="alert alert-info" role="alert" style="margin: 1% 15%">
+        <div class="alert alert-warning" role="alert" style="margin: 1% 15%">
             {{ flash_message }}
         </div>
     {% endfor %}
     <div class="col-xs-12 col-sm-offset-1 col-sm-6">
         <h1 style="margin: 2% 0 4% 0">Редаткирование товара</h1>
-        {{ form_start(form) }}
+        {{ form_start(form, {
+            'action': path('product_edit_id'),
+            'method': 'POST'
+        }) }}
+        <div class="error">
+            <span id="productError"></span>
+        </div>
         {{ form_widget(form) }}
-        <input type="submit" value="Сохранить" class="col-xs-12 col-md-3 btn btn-default" />
+        <input type="button" value="Сохранить" id="saveProduct" class="col-xs-12 col-md-3 btn btn-default" />
         {{ form_end(form) }}
         <div class="list-group"></div>
     </div>
@@ -23,6 +33,9 @@
         };
 
         $('input[type="file"]').css("width", "140px");
+        $('#saveProduct').click(function () {
+            productValidate({{ product.id }});
+        });
     </script>
     <script src="{{ asset('bundles/app/js/categoriesList.js') }}"></script>
 {% endblock %}
