--- a/app/Resources/views/products/create.html.twig
+++ b/app/Resources/views/products/create.html.twig
@@ -1,16 +1,27 @@
 {% extends ':home:index.html.twig' %}
 
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('bundles/app/js/validation.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/categoriesList.js') }}"></script>
+{% endblock %}
 {% block body %}
     {% for flash_message in app.session.flashbag.get('error') %}
-        <div class="alert alert-info" role="alert" style="margin: 1% 15%">
+        <div class="alert alert-warning" role="alert" style="margin: 1% 15%">
             {{ flash_message }}
         </div>
     {% endfor %}
     <div class="col-xs-12 col-sm-offset-1 col-sm-6">
         <h1 style="margin: 2% 0 4% 0">Добавление нового товара</h1>
-        {{ form_start(form) }}
+        {{ form_start(form, {
+            'action': path('product_create'),
+            'method': 'POST'
+        }) }}
+        <div class="error">
+            <span id="productError"></span>
+        </div>
         {{ form_widget(form) }}
-        <input type="submit" value="Сохранить" class="col-xs-12 col-md-3 btn btn-default" />
+        <input type="button" value="Сохранить" id="saveProduct" class="col-xs-12 col-md-3 btn btn-default" />
         {{ form_end(form) }}
         <div class="list-group"></div>
     </div>
@@ -20,6 +31,9 @@
             var output = document.getElementById('productImg');
             output.src = URL.createObjectURL(event.target.files[0]);
         };
+
+        $('#saveProduct').click(function () {
+            productValidate(null);
+        });
     </script>
-    <script src="{{ asset('bundles/app/js/categoriesList.js') }}"></script>
 {% endblock %}
