--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -27,7 +27,7 @@
     {% endfor %}
 
     <div class="col-xs-12 col-md-9">
-        <h1> Категория </h1> {#<h1>{{ category.name }}</h1>#} <a ></a>
+        <h1> Каталог товаров </h1>
         <div id="grid"></div>
     </div>
 
