bricks and table ajaxgrid, pages of cat-s and prod-s

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,7 +11,7 @@
             {% endstylesheets %}
         {% endblock %}
         {% block javascripts %}
-            {% javascripts 'js/*' %}
+            {% javascripts 'js/scripts/*' %}
             <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
             <script src="{{ asset_url }}"></script>
             {% endjavascripts %}
