--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -1,69 +1,23 @@
-{% extends ':security:index.html.twig' %}
+{% extends ':home:index.html.twig' %}
 
 {% block javascripts %}
     {{ parent() }}
-    <script>
-        $(document).ready(function () {
-            $(document).on('mouseenter', '.product', function () {console.log('open');
-                $(this).find(".admin").show();
-            }).on('mouseleave', '.product', function () {
-                $(this).find(".admin").hide();
-            });
-        });
-    </script>
+    <script src="{{ '/js/plugin/jquery.plugin.js' }}"></script>
 {% endblock %}
 {% block body %}
-    <div class="col-md-1 hidden-xs hidden-sm">
-        {{ knp_menu_render('sidebar', {'currentClass': 'active'}) }}
+    <div class="col-xs-12 col-md-offset-1 col-md-10">
+        <h1> Управление категориями </h1> {#<h1>{{ category.name }}</h1>#} <a></a>
+        <div id="grid"></div>
     </div>
-    <div class="col-xs-12 hidden-md hidden-lg">
-        {{ knp_menu_render('accordeon', {'currentClass': 'active'}) }}
-    </div>
-    <div class="col-xs-12 col-md-offset-1 col-md-9">
-        {#<ol class="breadcrumb">#}
-            {#<li><a href="#">Home</a></li>#}
-            {#<li><a href="#">Library</a></li>#}
-            {#<li class="active">Data</li>#}
-        {#</ol>#}
-        <h1> Категория </h1>
-        <div id="catalog_sorter" class="sort" data-current="popular">
-            <span>Сортировать по:</span>|
-            <a id="price" data-value="price" href="#">
-                <span>цене</span>
-            </a> |
-            <a id="sale" data-value="sale" href="#">
-                <span>названию</span>
-            </a>
-        </div>
-        <div class="pager">
-            <div class="pageToInsert" data-current="1" data-show-prefix="True">
-                <span class="total many">
-                    Товаров:
-                        <span>767</span>
-                </span>
-                <span class="active">1</span>
-                <a href="#">2</a>
-                <span>...</span>
-                <a href="#">755</a>
-                <a class="next" href="#">→</a>
-            </div>
-            <div class="count">
-                <!--noindex-->
-                <div class="pageSizer">
-                    <span>Показывать по:</span>
-                    <a class="pagesize_10" href="#">10</a>
-                    <a class="active pagesize_20" href="#">20</a>
-                    <a class="pagesize_30" href="#">30</a>
-                </div>
-                <!--/noindex-->
-            </div>
-        </div>
-
-
-        <div id="grid">
-
-        </div>
-        {#<h1>{{ category.name }}</h1>#}
-    </div>
-
+    <script>
+        $('#grid').ajaxgrid({
+            url: '/categories', // URL, с которого тянуть данные
+            sortableColumns: ['name'], // массив с именами полей сущности, по которым должна быть возможна сортировка
+            filterableColumns: ['name'], // массив с именами полей сущности, по которым должна быть возможна фильтрация
+            itemsPerPage: [6, 12, 20], // количество единиц на страницу для пагинации
+            page: 1,
+            view: 'table',
+            headers: ['#', 'Название категории', 'Родительская категория']
+        });
+    </script>
 {% endblock %}
