--- a/app/Resources/views/menu/header.html.twig
+++ b/app/Resources/views/menu/header.html.twig
@@ -8,12 +8,21 @@
                 <a class="active" href="#" onclick="openSearchForm()">
                     <i class="glyphicon glyphicon-search col-xs-4"></i>
                 </a>
-                <a href="#" data-toggle="modal" data-target="#loginModal">
-                    <i class="glyphicon glyphicon-log-in col-xs-4"></i>
-                </a>
-                <a href="#" data-toggle="modal" data-target="#registrationModal">
-                    <i class="glyphicon glyphicon-user col-xs-4"></i>
-                </a>
+                {% if is_granted("ROLE_USER") %}
+                        <a href="/users/details/{{ app.user.id }}">
+                            <i class="glyphicon glyphicon-user col-xs-4"></i>
+                        </a>
+                        <a href="/logout">
+                            <i class="glyphicon glyphicon-log-out col-xs-4"></i>
+                        </a>
+                {% else %}
+                    <a href="#" data-toggle="modal" data-target="#loginModal">
+                        <i class="glyphicon glyphicon-log-in col-xs-4"></i>
+                    </a>
+                    <a href="#" data-toggle="modal" data-target="#registrationModal">
+                        <i class="glyphicon glyphicon-user col-xs-4"></i>
+                    </a>
+                {% endif %}
             </div>
             <form class="navbar-form navbar-left col-sm-12 hidden-xs" id="searchForm" role="search"
                   onsubmit="alert('submit!');return false;">
@@ -26,7 +35,16 @@
             </form>
             <div class="nav navbar-nav navbar-right col-sm-3 hidden-xs" id="login_logup">
                 {% if is_granted("ROLE_USER") %}
-                    Hi {{ app.user.username }}
+                    <p>
+                        <a class="active" href="/users/details/{{ app.user.id }}">
+                            <i class="glyphicon glyphicon-user"></i>
+                            {{ app.user.username }}
+                        </a>
+                        <a style="margin-left: 30px" href="/logout">
+                            <i class="glyphicon glyphicon-log-out"></i>
+                            Выйти
+                        </a>
+                    </p>
                 {% else %}
                     {% include ':security:unauthorized.html.twig' %}
                 {% endif %}
