--- a/app/Resources/views/products/edit.html.twig
+++ b/app/Resources/views/products/edit.html.twig
@@ -1,9 +1,19 @@
 {% extends ':home:index.html.twig' %}
+{% block javascripts %}
+    {{ parent() }}
+    {#<script src="{{ 'js/validation.js' }}"></script>#}
+    <script src="{{ '/js/categoriesList.js' }}"></script>
+{% endblock %}
 {% block body %}
-    <h1>Редактирование</h1>
     <div class="col-xs-12 col-md-offset-1 col-md-4">
-        {{ form_start(form) }}
+        <h2 style="margin: 2% 0 4% 0">Редактирование товара</h2>
+        {{ form_start(form, { 'attr': {
+        'class' : 'productItem'},
+        'action': path('product_edit_id'),
+        'method': 'POST' }) }}
             {{ form_widget(form) }}
+            <input type="submit" value="Сохранить" id="saveCategory" class="col-xs-12 col-md-3 btn btn-default" />
         {{ form_end(form) }}
+        <div class="list-group"></div>
     </div>
 {% endblock %}
