--- a/app/Resources/views/category/edit.html.twig
+++ b/app/Resources/views/category/edit.html.twig
@@ -1,1 +1,33 @@
-Edit category
+{% extends ':home:index.html.twig' %}
+{% block javascripts %}
+    {{ parent() }}
+    {#<script src="{{ 'js/validation.js' }}"></script>#}
+    <script src="{{ '/js/validation/clientValidation.js' }}"></script>
+    <script src="{{ '/js/validation/validationFromDatabase.js' }}"></script>
+    {#<script src="http://formvalidation.io/vendor/formvalidation/js/formValidation.min.js"></script>#}
+    {#<script src="http://formvalidation.io/vendor/formvalidation/js/framework/bootstrap.min.js"></script>#}
+{% endblock %}
+{% block body %}
+    {% for flash_message in app.session.flashbag.get('error') %}
+        <div class="alert alert-warning" role="alert" style="margin: 1% 15%">
+            {{ flash_message }}
+        </div>
+    {% endfor %}
+    <div class="col-xs-12 col-md-offset-1 col-md-6">
+        <h2 style="margin: 2% 0 4% 0">Редактирование категории</h2>
+        {{ form_start(form, { 'attr': {
+            'class': 'category'},
+            'action': path('category_edit_id'),
+            'method': 'POST' }) }}
+        {{ form_widget(form) }}
+        <input type="button" value="Сохранить" id="saveCategory" class="col-xs-12 col-md-3 btn btn-default" />
+        {{ form_end(form) }}
+        <div class="list-group"></div>
+    </div>
+    <script>
+        $('#saveCategory').click(function () {
+            //categoryValidate({{ product.id }});
+        });
+    </script>
+    <script src="{{ asset('bundles/app/js/categoriesList.js') }}"></script>
+{% endblock %}
