--- a/app/Resources/views/users/details.html.twig
+++ b/app/Resources/views/users/details.html.twig
@@ -1,1 +1,41 @@
-Details of User
+{% extends ':home:index.html.twig' %}
+{#{% block javascripts %}#}
+    {#{{ parent() }}#}
+{#{% endblock %}#}
+{% block body %}
+    <div class="return col-xs-1 col-sm-3 col-md-2">
+        <a onclick="javascript:history.back(); return false;">
+            <i class="glyphicon glyphicon-chevron-left"></i>
+            <span class="hidden-xs">Назад</span>
+        </a>
+    </div>
+    <div style="margin-top: 2%" class="col-xs-12 col-md-offset-1 col-md-4">
+        <h2>
+            Профиль пользователя
+            <a href="/users/edit/{{ user.id }}" class="btn btn-link">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+            </a>
+        </h2>
+        <div class="details">
+            <p>
+                <span>Полное имя: </span> {{ user.firstName }} {{ user.surname }}
+            </p>
+            <p>
+                <span>Логин: </span> {{ user.username }}
+            </p>
+            <p>
+                <span>E-mail: </span> {{ user.email }}
+            </p>
+            <p>
+                <span>Роль: </span>
+                {% if is_granted('ROLE_ADMIN') %}
+                    администратор
+                {% elseif is_granted('ROLE_MODERATOR') %}
+                    модератор
+                {% else %}
+                    пользователь
+                {% endif %}
+            </p>
+        </div>
+    </div>
+{% endblock %}
