All functions work

--- a/app/Resources/views/category/create.html.twig
+++ b/app/Resources/views/category/create.html.twig
@@ -1,14 +1,12 @@
 {% extends ':home:index.html.twig' %}
-{% block javascripts %}
-    {{ parent() }}
-    <script src="{{ '/js/categoriesList.js' }}"></script>
-{% endblock %}
+
 {% block body %}
     {% for flash_message in app.session.flashbag.get('error') %}
         <div class="alert alert-warning" role="alert" style="margin: 1% 15%">
             {{ flash_message }}
         </div>
     {% endfor %}
+    <div class="list-group"></div>
     <div class="col-xs-12 col-sm-offset-1 col-sm-6">
         <h2 style="margin: 2% 0 4% 0">Добавление новой категории</h2>
         {{ form_start(form, { 'attr': {
@@ -17,16 +15,15 @@
             'method': 'POST' })
         }}
         <div class="error">
-            <span id="loginError"></span>
+            <span id="categoryError"></span>
         </div>
         {{ form_widget(form) }}
         <input type="button" value="Сохранить" id="saveCategory" class="col-xs-12 col-md-3 btn btn-default" />
         {{ form_end(form) }}
         <div class="list-group"></div>
     </div>
+    <script src="{{ asset('bundles/app/js/listOfCategory.js') }}"></script>
     <script>
-        $('#saveCategory').click(function () {
-            //categoryValidate(null);
-        });
+        setEventForSubmit('/categories/create', false);
     </script>
 {% endblock %}
