--- a/app/Resources/views/category/edit.html.twig
+++ b/app/Resources/views/category/edit.html.twig
@@ -2,8 +2,8 @@
 {% block javascripts %}
     {{ parent() }}
     {#<script src="{{ 'js/validation.js' }}"></script>#}
-    <script src="{{ '/js/validation/clientValidation.js' }}"></script>
-    <script src="{{ '/js/validation/validationFromDatabase.js' }}"></script>
+    {#<script src="{{ '/js/validation/clientValidation.js' }}"></script>#}
+    {#<script src="{{ '/js/validation/validationFromDatabase.js' }}"></script>#}
     {#<script src="http://formvalidation.io/vendor/formvalidation/js/formValidation.min.js"></script>#}
     {#<script src="http://formvalidation.io/vendor/formvalidation/js/framework/bootstrap.min.js"></script>#}
 {% endblock %}
@@ -13,21 +13,23 @@
             {{ flash_message }}
         </div>
     {% endfor %}
+    <div class="list-group"></div>
     <div class="col-xs-12 col-md-offset-1 col-md-6">
         <h2 style="margin: 2% 0 4% 0">Редактирование категории</h2>
         {{ form_start(form, { 'attr': {
             'class': 'category'},
-            'action': path('category_edit_id'),
+            'action': path('category_edit_id', { 'id': category.id }),
             'method': 'POST' }) }}
+        <div class="error">
+            <span id="categoryError"></span>
+        </div>
         {{ form_widget(form) }}
         <input type="button" value="Сохранить" id="saveCategory" class="col-xs-12 col-md-3 btn btn-default" />
         {{ form_end(form) }}
         <div class="list-group"></div>
     </div>
+    <script src="{{ asset('bundles/app/js/listOfCategory.js') }}"></script>
     <script>
-        $('#saveCategory').click(function () {
-            //categoryValidate({{ product.id }});
-        });
+        setEventForSubmit('/categories/edit/' + {{ category.id }}, true);
     </script>
-    <script src="{{ asset('bundles/app/js/categoriesList.js') }}"></script>
 {% endblock %}
