--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -5,6 +5,12 @@
     <script src="{{ '/plugin/jquery.plugin.js' }}"></script>
 {% endblock %}
 {% block body %}
+    {% for flash_message in app.session.flashbag.get('message') %}
+        <div class="alert alert-info" role="alert" style="margin: 5% 15% 1%">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ flash_message }}
+        </div>
+    {% endfor %}
     <div class="col-xs-12 col-md-offset-1 col-md-10">
         <h1> Управление категориями </h1>
         <div id="grid"></div>
