--- a/app/Resources/views/security/forgot_password.html.twig
+++ b/app/Resources/views/security/forgot_password.html.twig
@@ -1,11 +1,14 @@
-{% extends "base.html.twig" %}
+{% extends ':home:index.html.twig' %}
 
 {% block body %}
-    {% for flash_message in app.session.flashbag.get('message') %}
-        {{ flash_message }}
-    {% endfor %}
-
-    {{ form_start(form) }}
+    <div style="margin: 2%" class="col-xs-12 col-md-offset-1 col-md-4">
+        <h2>Редактирование профиля</h2>
+        {{ form_start(form, {
+            'action': path('reset_password', { 'hash': hash }),
+            'method': 'POST' }) }}
         {{ form_widget(form) }}
-    {{ form_end(form) }}
+        <input type="submit" value="Сменать пароль" id="savePassword" class="col-xs-12 col-md-3 btn btn-default" />
+        {{ form_end(form) }}
+        <div class="list-group"></div>
+    </div>
 {% endblock %}
