--- a/app/Resources/views/users/details.html.twig
+++ b/app/Resources/views/users/details.html.twig
@@ -1,7 +1,5 @@
 {% extends ':home:index.html.twig' %}
-{#{% block javascripts %}#}
-    {#{{ parent() }}#}
-{#{% endblock %}#}
+
 {% block body %}
     <div class="return col-xs-1 col-sm-3 col-md-2">
         <a onclick="javascript:history.back(); return false;">
@@ -9,12 +7,22 @@
             <span class="hidden-xs">Назад</span>
         </a>
     </div>
+
+    {% for flash_message in app.session.flashbag.get('message') %}
+        <div class="alert alert-info" role="alert" style="margin: 1% 15%">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ flash_message }}
+        </div>
+    {% endfor %}
+
     <div style="margin-top: 2%" class="col-xs-12 col-md-offset-1 col-md-4">
         <h2>
             Профиль пользователя
-            <a href="/users/edit/{{ user.id }}" class="btn btn-link">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </a>
+            {% if user.id == app.user.id %}
+                <a href="/users/edit/{{ user.id }}" class="btn btn-link">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                </a>
+            {% endif %}
         </h2>
         <div class="details">
             <p>
@@ -28,9 +36,9 @@
             </p>
             <p>
                 <span>Роль: </span>
-                {% if is_granted('ROLE_ADMIN') %}
+                {% if user.role == 'ROLE_ADMIN' %}
                     администратор
-                {% elseif is_granted('ROLE_MODERATOR') %}
+                {% elseif user.role == 'ROLE_MODERATE' %}
                     модератор
                 {% else %}
                     пользователь
