--- a/app/Resources/views/users/index.html.twig
+++ b/app/Resources/views/users/index.html.twig
@@ -1,1 +1,33 @@
-Table of users
+{% extends ':home:index.html.twig' %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ '/plugin/jquery.plugin.js' }}"></script>
+{% endblock %}
+{% block body %}
+    {% for flash_message in app.session.flashbag.get('message') %}
+        <div class="alert alert-info" role="alert" style="margin: 5% 15% 1%">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ flash_message }}
+        </div>
+    {% endfor %}
+    <div class="alert alert-info" role="alert" style="margin: 5% 15% 1%; display: none">
+        <span id="messageInfo"></span>
+    </div>
+    <div class="col-xs-12 col-md-offset-1 col-md-10">
+        <h1> Управление пользователями </h1>
+        <div id="grid"></div>
+    </div>
+    <script>
+        $('#grid').ajaxgrid({
+            url: '/users', // URL, с которого тянуть данные
+            sortableColumns: ['username'], // массив с именами полей сущности, по которым должна быть возможна сортировка
+            filterableColumns: ['username'], // массив с именами полей сущности, по которым должна быть возможна фильтрация
+            itemsPerPage: [6, 12, 20], // количество единиц на страницу для пагинации
+            page: 1,
+            view: 'table',
+            headers: ['#', 'Полное имя', 'Логин', 'E-mail', 'Роль'],
+            username: '{{ app.user.username }}'
+        });
+    </script>
+{% endblock %}
