--- a/app/Resources/views/category/edit.html.twig
+++ b/app/Resources/views/category/edit.html.twig
@@ -9,6 +9,12 @@
     <script src="http://formvalidation.io/vendor/formvalidation/js/framework/bootstrap.min.js"></script>
 {% endblock %}
 {% block body %}
+    <div class="return col-xs-1 col-sm-3 col-md-2">
+        <a onclick="javascript:history.back(); return false;">
+            <i class="glyphicon glyphicon-chevron-left"></i>
+            <span class="hidden-xs">Назад</span>
+        </a>
+    </div>
     <div class="col-xs-12 col-md-offset-1 col-md-6">
         <h2 style="margin: 2% 0 4% 0">Редактирование категории</h2>
         {{ form_start(form, { 'attr': {
