--- a/app/Resources/views/home/about.html.twig
+++ b/app/Resources/views/home/about.html.twig
@@ -4,11 +4,11 @@
     <div class="return col-xs-1 col-sm-3 col-md-2">
         <a onclick="javascript:history.back(); return false;">
             <i class="glyphicon glyphicon-chevron-left"></i>
-            <span class="hidden-xs">Назад</span>
+            <span class="hidden-xs">{{ 'Назад'|trans }}</span>
         </a>
     </div>
     <div class="col-xs-12 col-sm-offset-1 col-sm-6">
-        <h2 style="margin: 2% 0 4% 0">О нас</h2>
+        <h2 style="margin: 2% 0 4% 0">{{ 'О нас'|trans }}</h2>
         <p>Курсовой проект "Каталог товаров" разработан от
             большой любви к программированию и сладкому </p>
     </div>
