--- a/app/Resources/views/category/create.html.twig
+++ b/app/Resources/views/category/create.html.twig
@@ -3,18 +3,18 @@
 {% block body %}
     {% for flash_message in app.session.flashbag.get('error') %}
         <div class="alert alert-warning" role="alert" style="margin: 1% 15%">
-            {{ flash_message }}
+            {{ flash_message|trans }}
         </div>
     {% endfor %}
     <div class="return col-xs-1 col-sm-3 col-md-2">
         <a onclick="javascript:history.back(); return false;">
             <i class="glyphicon glyphicon-chevron-left"></i>
-            <span class="hidden-xs">Назад</span>
+            <span class="hidden-xs">{{ 'Назад'|trans }}</span>
         </a>
     </div>
     <div class="list-group"></div>
     <div class="col-xs-12 col-sm-offset-1 col-sm-6">
-        <h2 style="margin: 2% 0 4% 0">Добавление новой категории</h2>
+        <h2 style="margin: 2% 0 4% 0">{{ 'Добавление новой категории'|trans }}</h2>
         {{ form_start(form, { 'attr': {
             'class': 'category'},
             'action': path('create_category'),
@@ -24,7 +24,7 @@
             <span id="categoryError"></span>
         </div>
         {{ form_widget(form) }}
-        <input type="button" value="Сохранить" id="saveCategory" class="col-xs-12 col-md-3 btn btn-default" />
+        <input type="button" value="{{ 'Сохранить'|trans }}" id="saveCategory" class="col-xs-12 col-md-3 btn btn-default" />
         {{ form_end(form) }}
         <div class="list-group"></div>
     </div>
