--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -26,9 +26,9 @@
 {% endblock %}
 {% block body %}
     {% for flash_message in app.session.flashbag.get('message') %}
-        <div class="alert alert-info" role="alert" style="margin: 5% 15% 1%">
+        <div class="alert alert-info" role="alert" style="margin: 5% 10% 1%">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ flash_message }}
+            {{ flash_message|trans }}
         </div>
     {% endfor %}
     <div class="customCarousel">
@@ -46,24 +46,24 @@
                 <div class="item">
                     <img src="https://img1.goodfon.ru/original/2048x1152/0/4f/podarki-konfety-cvety-torty.jpg" alt="Los Angeles" style="width:100%;">
                     <div class="carousel-caption">
-                        <h3>Лучшие подарки</h3>
-                        <p>Дарите подарки по поводу и без</p>
+                        <h3>{{ 'Лучшие подарки'|trans }}</h3>
+                        <p>{{ 'Дарите подарки по поводу и без'|trans }}</p>
                     </div>
                 </div>
 
                 <div class="item active">
                     <img src="http://www.zastavki.com/pictures/1366x768/2012/Food_Differring_meal_Bakery_and_Coffee_033408_.jpg" alt="Chicago" style="width:100%;">
                     <div class="carousel-caption">
-                        <h3>Только свежая выпечка</h3>
-                        <p>Выпечка из местных кулинарий</p>
+                        <h3>{{ 'Только свежая выпечка'|trans }}</h3>
+                        <p>{{ 'Выпечка из местных кулинарий'|trans }}</p>
                     </div>
                 </div>
 
                 <div class="item">
                     <img src="http://www.zastavki.com/pictures/1366x768/2014/Food___Cakes_and_Sweet_____Candy_on_sticks_090938_24.jpg" alt="New York" style="width:100%;">
                     <div class="carousel-caption">
-                        <h3>Сладкое для настроения</h3>
-                        <p>Радуйте себя и близких!</p>
+                        <h3>{{ 'Сладкое для настроения'|trans }}</h3>
+                        <p>{{ 'Радуйте себя и близких!'|trans }}</p>
                     </div>
                 </div>
             </div>
@@ -78,14 +78,6 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-    </div>
-{% endblock %}
-{% block footer %}
-    <div class="info col-xs-offset-5 col-xs-3" style="float: right">
-        <p>
-            Проект разработан студентами курсов Itransition <br>
-            Alexander Lapkovsky & Elizaveta Korob &copy 2017
-        </p>
     </div>
 {% endblock %}
 
