--- a/app/Resources/views/products/details.html.twig
+++ b/app/Resources/views/products/details.html.twig
@@ -7,7 +7,7 @@
     <div class="return col-xs-1 col-sm-3 col-md-2">
         <a onclick="javascript:history.back(); return false;">
             <i class="glyphicon glyphicon-chevron-left"></i>
-            <span class="hidden-xs">Вернуться к каталогу</span>
+            <span class="hidden-xs">{{ 'Вернуться к каталогу'|trans }}</span>
         </a>
     </div>
     <div class="col-md-8" style="margin-top: 3%">
@@ -18,8 +18,8 @@
             <h1> {{ product.name }} </h1>
             {% if is_granted("ROLE_MODERATOR")%}
                 <span style="color: #e0dfe1; font-size: 14px;">
-                        Дата создания: {{ product.createDate|date('d.m.Y') }} <br>
-                        Дата последнего изменения: {{ product.updateDate|date('d.m.Y') }}
+                        {{ 'Дата создания'|trans }}: {{ product.createDate|date('d.m.Y') }} <br>
+                        {{ 'Дата последнего изменения'|trans }}: {{ product.updateDate|date('d.m.Y') }}
                 </span>
                 <a href="/products/edit/{{ product.id }}" class="btn btn-link">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -28,11 +28,11 @@
             <span style="font-size: 20px;">{{ product.price }} р.</span>
             <div class="details">
                 <p>
-                    <span>Описание: </span><br>
+                    <span>{{ 'Описание'|trans }}: </span><br>
                     {{ product.description }}
                 </p>
                 <p>
-                    <span>Производитель: </span> {{ product.getManufacturer().name }}, {{ product.getManufacturer().country }}
+                    <span>{{ 'Производитель'|trans }}: </span> {{ product.getManufacturer().name }}, {{ product.getManufacturer().country }}
                 </p>
                 <p>
                     <span>SKU: </span> {{ product.sku }}
