--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -19,7 +19,7 @@
     {% for flash_message in app.session.flashbag.get('message') %}
         <div class="alert alert-info" role="alert" style="margin: 5% 5% 1% 25%">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ flash_message }}
+            {{ flash_message|trans }}
         </div>
     {% endfor %}
 
@@ -27,9 +27,9 @@
     <div class="col-xs-12 col-md-9">
         <h1>
             {% if filter %}
-                Поиск по "{{ filter }}"
+                {{ 'Поиск по'|trans }} "{{ filter }}"
             {% else %}
-                Каталог товаров
+                {{ 'Каталог товаров'|trans }}
             {% endif %}
             {% if is_granted("ROLE_MODERATOR") %}
                 <a href="{{ path('product_create') }}" class="btn btn-default ">
