--- a/app/Resources/views/security/forgot_password.html.twig
+++ b/app/Resources/views/security/forgot_password.html.twig
@@ -2,13 +2,12 @@
 
 {% block body %}
     <div style="margin: 2%" class="col-xs-12 col-md-offset-1 col-md-4">
-        <h2>Редактирование профиля</h2>
+        <h2>{{ 'Смена пароля'|trans }}</h2>
         {{ form_start(form, {
             'action': path('reset_password', { 'hash': hash }),
             'method': 'POST' }) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Сменать пароль" id="savePassword" class="col-xs-12 col-md-3 btn btn-default" />
+        <input type="submit" value="{{ 'Сменить пароль'|trans }}" id="savePassword" class="col-xs-12 col-md-3 btn btn-default" />
         {{ form_end(form) }}
-        <div class="list-group"></div>
     </div>
 {% endblock %}
