--- a/app/Resources/views/users/details.html.twig
+++ b/app/Resources/views/users/details.html.twig
@@ -4,20 +4,20 @@
     <div class="return col-xs-1 col-sm-3 col-md-2">
         <a onclick="javascript:history.back(); return false;">
             <i class="glyphicon glyphicon-chevron-left"></i>
-            <span class="hidden-xs">Назад</span>
+            <span class="hidden-xs">{{ 'Назад'|trans }}</span>
         </a>
     </div>
 
     {% for flash_message in app.session.flashbag.get('message') %}
         <div class="alert alert-info" role="alert" style="margin: 1% 15%">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ flash_message }}
+            {{ flash_message|trans }}
         </div>
     {% endfor %}
 
-    <div style="margin-top: 2%" class="col-xs-12 col-md-offset-1 col-md-4">
+    <div style="margin-top: 2%" class="col-xs-12 col-md-4">
         <h2>
-            Профиль пользователя
+            {{ 'Профиль пользователя'|trans }}
             {% if user.id == app.user.id %}
                 <a href="/users/edit/{{ user.id }}" class="btn btn-link">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
@@ -26,22 +26,22 @@
         </h2>
         <div class="details">
             <p>
-                <span>Полное имя: </span> {{ user.firstName }} {{ user.surname }}
+                <span>{{ 'Полное имя'|trans }}: </span> {{ user.firstName }} {{ user.surname }}
             </p>
             <p>
-                <span>Логин: </span> {{ user.username }}
+                <span>{{ 'Логин'|trans }}: </span> {{ user.username }}
             </p>
             <p>
-                <span>E-mail: </span> {{ user.email }}
+                <span>{{ 'Электронная почта'|trans }}: </span> {{ user.email }}
             </p>
             <p>
-                <span>Роль: </span>
+                <span>{{ 'Роль'|trans }}: </span>
                 {% if user.role == 'ROLE_ADMIN' %}
-                    администратор
+                    {{ 'администратор'|trans }}
                 {% elseif user.role == 'ROLE_MODERATE' %}
-                    модератор
+                    {{ 'модератор'|trans }}
                 {% else %}
-                    пользователь
+                    {{ 'пользователь'|trans }}
                 {% endif %}
             </p>
         </div>
