--- a/app/Resources/views/users/index.html.twig
+++ b/app/Resources/views/users/index.html.twig
@@ -8,14 +8,14 @@
     {% for flash_message in app.session.flashbag.get('message') %}
         <div class="alert alert-info" role="alert" style="margin: 5% 15% 1%">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ flash_message }}
+            {{ flash_message|trans }}
         </div>
     {% endfor %}
     <div class="alert alert-info" role="alert" style="margin: 5% 15% 1%; display: none">
         <span id="messageInfo"></span>
     </div>
     <div class="col-xs-12 col-md-offset-1 col-md-10">
-        <h1> Управление пользователями </h1>
+        <h1>{{ 'Управление пользователями'|trans }}</h1>
         <div id="grid"></div>
     </div>
     <script>
@@ -26,7 +26,7 @@
             itemsPerPage: [6, 12, 20],
             page: 1,
             view: 'table',
-            headers: ['#', 'Полное имя', 'Логин', 'E-mail', 'Роль'],
+            headers: ['#', '{{ 'Полное имя'|trans }}', '{{ 'Логин'|trans }}', 'E-mail', '{{ 'Роль'|trans }}', '{{ 'Функции'|trans }}'],
             username: '{{ app.user.username }}'
         });
     </script>
